--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,10 @@
 {
   "require": {
     "elasticsearch/elasticsearch": "~5.0",
-    "facebook/graph-sdk": "^5.6",
     "aws/aws-sdk-php": "^3.69",
-    "cloudflare/sdk": "^1.1.1",
-    "vimeo/vimeo-api": "2.0.1"
+    "cloudflare/sdk": "^1.1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^6"
   }
 }
