--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "cloudflare/sdk": "^1.1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8"
+    "phpunit/phpunit": "^5.7"
+  },
+  "autoload": {
+    "psr-4": {
+      "App\\": "app"
+    }
   }
 }
