--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,16 @@
 language: php
 php: 7.2
+addons: # get google-chrome-stable
+  chrome: stable
+install: # Install ChromeDriver (64bits; replace 64 with 32 for 32bits).
+  - wget -N http://chromedriver.storage.googleapis.com/2.30/chromedriver_linux64.zip -P ~/
+  - unzip ~/chromedriver_linux64.zip -d ~/
+  - rm ~/chromedriver_linux64.zip
+  - sudo mv -f ~/chromedriver /usr/local/share/
+  - sudo chmod +x /usr/local/share/chromedriver
+  - sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
 before_script:
-    - echo $PATH
-    - mkdir /home/travis/virtualenv/python2.7.12/bin
     - composer install
-    - wget http://chromedriver.storage.googleapis.com/76.0.3809.126/chromedriver_linux64.zip
-    - unzip chromedriver_linux64.zip -d /home/travis/virtualenv/python2.7.12/bin/
-    - export CHROME_BIN=chromium-browser
+script:
+  - whereis google-chrome-stable
+  - whereis chromedriver
