--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "cloudflare/sdk": "^1.1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^7.0",
+    "phpunit/phpunit-selenium": "^7.0"
   },
   "autoload": {
     "psr-4": {
