--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^7.0",
-    "phpunit/phpunit-selenium": "^7.0"
+    "phpunit/phpunit-selenium": "^7.0",
+    "facebook/webdriver": "1.0"
   },
   "autoload": {
     "psr-4": {
