Replacing sc connect bin

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,16 @@
 language: php
-php: 7.2
-before_script:
+dist: trusty
+
+sudo: required
+
+matrix:
+  include:
+    - php: "7.2"
+
+script:
   - composer install
-addons:
-  sauce_connect:
-    username: "pubinator"
-    access_key: "580f062b-af5a-4982-85dc-4619f66a2987"
+  - chmod +x tests/sauce.sh
+  - chmod +x tests/run.sh
+  - tests/sauce.sh
+  - tests/run.sh
+  - vendor/bin/phpunit
