--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "cloudflare/sdk": "^1.1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7.0",
-    "phpunit/phpunit-selenium": "^7.0",
+    "phpunit/phpunit": ">=7.5.9",
+    "phpunit/phpunit-selenium": "^7.0.0",
     "facebook/webdriver": "1.0"
   },
   "autoload": {
